Cluster/central-library-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: central-library-pod
  labels:
    app: central-app
spec:
  volumes:
    - name: mysql-data
      persistentVolumeClaim:
        claimName: mysql-pvc
  containers:
    - name: central-app
      image: mgravara/centrallibrary:0.0.1
      ports: 
      - containerPort: 5292
    - name: mysql-db
      image: mysql:latest
      ports:
      - containerPort: 3306
      volumeMounts:
      - mountPath: "/var/lib/mysql" 
        name: mysql-data
