Cluster/city-library-bg-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: city-library-bg-pod
  labels:
    app: city-bg-app
spec:
  volumes:
    - name: postgres-bg
      persistentVolumeClaim:
        claimName: postgres-bg-pvc
  containers:
    - name: city-bg
      image: mgravara/citylibrary:0.0.1
      ports: 
      - containerPort: 8081
    - name: postgres-db-bg
      image: postgres:latest
      ports:
      - containerPort: 5432
      volumeMounts:
      - mountPath: "/var/lib/postgresql/data" 
        name: postgres-bg
