Cluster/city-library-ni-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: city-library-ni-pod
  labels: 
    app: city-ni-app
spec:
  volumes:
    - name: postgres-ni
      persistentVolumeClaim:
        claimName: postgres-ni-pvc
  containers:
    - name: city-ni
      image: mgravara/citylibrary:0.0.1
      ports: 
      - containerPort: 8081
    - name: postgres-db-ni
      image: postgres:latest
      ports:
      - containerPort: 5432
      volumeMounts:
      - mountPath: "/var/lib/postgresql/data" 
        name: postgres-ni
