Cluster/city-library-ns-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: city-library-ns-pod
  labels:
    app-ns: city-ns-app
spec:
  volumes:
    - name: postgres-ns
      persistentVolumeClaim:
        claimName: postgres-ns-pvc
  containers:
    - name: city-ns
      image: mgravara/citylibrary:0.0.1
      ports: 
      - containerPort: 8081
    - name: postgres-db-ns
      image: postgres:latest
      ports:
      - containerPort: 5432
      volumeMounts:
      - mountPath: "/var/lib/postgresql/data" 
        name: postgres-ns
