Cluster/central-library-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-library-service
spec:
  selector:
    app-central: central-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
