Cluster/city-library-bg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: city-library-bg-service
spec:
  selector:
    app: city-bg-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
