Cluster/city-library-ni-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: city-library-ni-service
spec:
  selector:
    app-ni: city-ni-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
