Cluster/city-library-ns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: city-library-ns-service
spec:
  selector:
    app-ns: city-ns-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
